--- a/algorithms-and-programming-II/workspace/.recommenders/caches/identified-project-coordinates.json
+++ b/algorithms-and-programming-II/workspace/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"/home/gabriel/workspace/ads-senacRS/algorithms-and-programming-II/workspace/APS_I","type":"PROJECT","hints":{"PROJECT_NAME":"APS_I"}},"ABSENT"],[{"location":"/home/gabriel/Downloads/simplejava.jar","type":"JAR","hints":{}},"ABSENT"],[{"location":"/usr/lib/jvm/java-8-openjdk-amd64","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
