.gitignore FUCKING FILES OF JAVA

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ algorithms-and-programming-II/*.tmp
 algorithms-and-programming-II/*.~
 algorithms-and-programming-II/*.swp
 algorithms-and-programming-II/.metadata/
+algorithms-and-programming-II/RemoteSystemsTempFiles/
