--- a/algorithms-and-programming-II/APSII/.project
+++ b/algorithms-and-programming-II/APSII/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>APS01</name>
+	<name>APSII</name>
 	<comment></comment>
 	<projects>
 	</projects>
