--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ algorithms-and-programming-II/*.~
 algorithms-and-programming-II/*.swp
 algorithms-and-programming-II/.metadata/
 algorithms-and-programming-II/RemoteSystemsTempFiles/
+/.metadata/
