--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ algorithms-and-programming-II/*.swp
 algorithms-and-programming-II/.metadata/
 algorithms-and-programming-II/RemoteSystemsTempFiles/
 /.metadata/
+RemoteSystemsTempFiles
