--- a/human-computer-interface/project-calendar/package.json
+++ b/human-computer-interface/project-calendar/package.json
@@ -8,17 +8,12 @@
   },
   "author": "Gabriel Corrêa",
   "license": "ISC",
-  "dependencies": {
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-clean-css": "^2.0.12",
-    "gulp-rename": "^1.2.2",
-    "gulp-requirejs-optimize": "^1.2.0",
-    "gulp-sass": "2.3.2",
-    "gulp-sourcemaps": "1.6.0"
-  },
   "devDependencies": {
-    "run-sequence": "^1.2.2",
-    "gulp-clean": "^0.3.2"
+    "grunt": "^1.0.1",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "gulp": "^3.9.1",
+    "gulp-livereload": "^3.8.1",
+    "gulp-sass": "^3.1.0"
   }
 }
